title visibility fix

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1680,7 +1680,8 @@ body.lightmode .digital-process-banner {
     display: inline-block;
     -webkit-background-clip: text;
     background-color: transparent;
-    background-image: linear-gradient(349deg, var(--accent-transparent) 30%, var(--primary) 100%);
+    /* background-image: linear-gradient(349deg, var(--accent-transparent) 30%, var(--primary) 100%); */
+    background-image: linear-gradient(351deg, var(--accent-transparent) 30%, var(--primary) 100%);
     -webkit-text-fill-color: transparent;
     -webkit-tap-highlight-color: transparent;
     /* font-size: var(--font-size-15xl); */
